# suola

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build.sh  cli.go  go.mod  go.sum  js.go  lib.go  main.go  main_test.go  rules.yaml  wasi.go  wasi_test.go  wasm.go
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
python/: pyproject.toml
python/src/suola/: __init__.py  _daemon.py  _wasm.py  api.py  util.py
python/test/: test_custom_rules.py  test_rules_yaml.py  test_wasm_memory.py
src/: lib.rs  main.rs
